Nomination feed truncate issue completed

--- a/nominate_app/static/css/nomination_feed.css
+++ b/nominate_app/static/css/nomination_feed.css
@@ -83,3 +83,11 @@ color:#067084d6;
   font-size: 14px;
 }
 
+.border-styling {
+  background: #e6e6e6;
+  border-radius: 4px;
+  margin-top: -20px;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-top: 22px;
+}
